# blog-django-REST-VUE

./: .gitignore  README.md  pyproject.toml
backend/blogAPI/blog/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/blogAPI/blogAPI/: asgi.py  settings.py  urls.py  wsgi.py
backend/blogAPI/users/: admin.py  models.py  serializers.py  urls.py  views.py
