[tool.poetry]
name = "blog-django-rest-vue"
version = "0.1.0"
description = ""
authors = ["Nadorozhnyy <59502289+Nadorozhnyy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = {extras = ["all"], version = "^5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
